# onebuttonsite-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
recipes/: add-subdomain.md  buy-domain.md  check-domain.md  commands.md  create-site.md  estimate-costs.md  hosting-frontend.md  hosting-vps.md  index.md  setup-ssl.md  view-costs.md
src/: main.rs
tests/: cli_tests.rs
