[package]
name = "onebuttonsite"
version = "0.1.0"
edition = "2021"
description = "Deploy static sites to AWS Amplify with one command"
license = "MIT"
repository = "https://github.com/TheSeanLavery/onebuttonsite-cli"
homepage = "https://github.com/TheSeanLavery/onebuttonsite-cli"
readme = "README.md"
keywords = ["aws", "amplify", "deploy", "cli", "static-site"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "obs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
